--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - name: Extract version
         id: extract_version
@@ -21,6 +21,15 @@ jobs:
       # From now you can access the version
       - name: Print version
         run: echo ${{ steps.extract_version.outputs.version }}
+      
+      - name: Bump release version
+        id: bump_version
+        uses: christian-draeger/increment-semantic-version@1.0.2
+        with:
+          current-version: ${{ steps.extract_version.outputs.version }}
+          version-fragment: 'feature'
+      - name: Do something with your bumped release version
+        run: echo ${{ steps.bump_version.outputs.next-version }}
         
   QG:
     name: SonarCloud
@@ -30,6 +39,9 @@ jobs:
         with:
           # Shallow clones should be disabled for a better relevancy of analysis
           fetch-depth: 0
+      - name: List files
+        run: ll
+        run: echo $(ls -lah)
       - name: Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
