--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,9 @@ jobs:
           # Shallow clones should be disabled for a better relevancy of analysis
           fetch-depth: 0
       - name: List files
-        run: ll
-        run: echo $(ls -lah)
+        run: |
+          ll
+          echo $(ls -lah)
       - name: Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
