--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,10 @@ jobs:
       - name: feature name
         run: |
           if [[ "contains( ${{steps.extract_branch.outputs.branch}}, 'features/' ) || contains( ${{steps.extract_branch.outputs.branch}}, 'develop/' )" ]]; then
-            echo "##[set-output name=feature;]$(echo ${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch})"
+            echo "##[set-output name=feature;]$(echo bug)"
           fi
           if [[ "${steps.extract_branch.outputs.branch}" == "main"]]; then
-            echo "##[set-output name=feature;]$(echo ${steps.extract_version.outputs.version})"
+            echo "##[set-output name=feature;]$(echo feature)"
           fi
         id: feature_name
       
@@ -49,10 +49,13 @@ jobs:
         run: echo ${{ steps.bump_version.outputs.next-version }} on ${{ steps.extract_branch.outputs.branch }}
       
       - name: Tag name
-        if: contains( ${{steps.extract_branch.outputs.branch}}, 'features/' ) || contains( ${{steps.extract_branch.outputs.branch}}, 'develop/' )
-        run: echo "##[set-output name=tag;]$(echo ${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch})"
-        if: steps.extract_branch.outputs.branch == 'main'
-        run: echo "##[set-output name=tag;]$(echo ${steps.extract_version.outputs.version})"
+        run: |
+          if [[ "contains( ${{steps.extract_branch.outputs.branch}}, 'features/' ) || contains( ${{steps.extract_branch.outputs.branch}}, 'develop/' )" ]]; then
+            echo "##[set-output name=tag;]$(echo ${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch})"
+          fi
+          if [[ "${steps.extract_branch.outputs.branch}" == "main"]]; then
+            echo "##[set-output name=tag;]$(echo ${steps.extract_version.outputs.version})"
+          fi
         id: tag_name
 
       - name: Image name
