--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Image name
         #run: echo ${{ steps.feature_name.outputs.feature }} - ${{ steps.tag_name.outputs.tag }}
-        run: echo ${{ steps.feature_name.outputs.feature }}
+        run: echo ${{ steps.feature_name }}
         
   QG:
     name: SonarCloud
