--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,6 @@ jobs:
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
 
-      - name: echo branch name
-        run: |
-          echo ${GITHUB_REF#refs/heads/} 
-          echo ${contains(steps.extract_branch.outputs.branch, "main")}
-
       #- name: feature name
       #  #if [[ "contains( ${{steps.extract_branch.outputs.branch}}, 'features/' ) || contains( ${{steps.extract_branch.outputs.branch}}, 'develop/' )" ]]; then
       #  run: |
@@ -54,7 +49,7 @@ jobs:
       #    echo "##[set-output name=feature;]$(echo bug)"
       - name: feature name
         id: feature_name
-        if: contains(steps.extract_branch.outputs.branch, 'main')
+        if: ${{ contains(steps.extract_branch.outputs.branch, 'main') == "true"}}
         run: |
           echo "##[set-output name=feature;]$(echo feature)"  
       
