--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,13 +56,13 @@ jobs:
 
       - name: Tag name
         run: |
-          echo *** Branch name *** : ${{ env.branch_name }}
+          echo *** Branch name *** : ${{ env.branch_name }} / ${{steps.extract_version.outputs.version}}
           if [[ ${{ env.branch_name }} =~ "feature/" || ${{ env.branch_name }} =~ "develop" ]]; then
             echo "::set-output name=tag::${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch}"
           fi
           if [[ ${{ env.branch_name }} == "main" ]]; then
             echo *** Tag name ***
-            echo "::set-output name=tag::${steps.extract_version.outputs.version}"
+            echo "::set-output name=tag::${{steps.extract_version.outputs.version}}"
           fi
         id: tag_name
 
