--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,11 @@ jobs:
 
       - run: npm install
       - run: npm test
+      - run: npm build
+
+
+      - name: List files
+        run: ls -lah
         
   QG:
     name: SonarCloud
@@ -53,8 +58,6 @@ jobs:
         with:
           # Shallow clones should be disabled for a better relevancy of analysis
           fetch-depth: 0
-      - name: List files
-        run: ls -lah
       - name: Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
@@ -64,7 +67,6 @@ jobs:
             -Dsonar.projectKey=orga-squad-dev_squad-dev 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   version:
@@ -117,10 +119,12 @@ jobs:
         run: |
           echo *** Branch name *** : ${{ env.branch_name }} / ${{steps.extract_version.outputs.version}}
           if [[ ${{ env.branch_name }} =~ "feature/" || ${{ env.branch_name }} =~ "develop" ]]; then
-            echo "::set-output name=tag::${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch}"
+            #echo "::set-output name=tag::${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch}"
+            echo "tag=${steps.extract_version.outputs.version}-${steps.extract_branch.outputs.branch}" >> $GITHUB_ENV
           fi
           if [[ ${{ env.branch_name }} == "main" ]]; then
-            echo "::set-output name=tag::${{steps.extract_version.outputs.version}}"
+            #echo "::set-output name=tag::${{steps.extract_version.outputs.version}}"
+            echo "tag=${{steps.extract_version.outputs.version}}" >> $GITHUB_ENV
           fi
         id: image_name
 
@@ -137,5 +141,62 @@ jobs:
         with:
           name: sources
           path: ./
+
+      #- name: docker login
+      #  env:
+      #    DOCKER_USER: ${{ secrets.DOCKER_USER }}
+      #    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      #    repository: ${{ secrets.DOCKER_APP }}:${{ env.tag }} # jetenow/squaddev ==  image_name
+      #    tags: latest, ${{ secrets.DOCKER_TOKEN }}
+      #  run: |
+      #    docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+#
+      #- name: Docker Push
+      #  run: docker push ${{secrets.DOCKER_USER}}/vampi_docker:latest
+
+      #- name: push image to ghcr.io
+      #  uses: redhat-actions/push-to-registry@v2
+      #  with:
+      #    image: ${{ steps.build-image.outputs.image }}
+      #    tags: ${{ steps.build-image.outputs.tags }}
+      #    registry: ghcr.io
+      #    username: ${{ github.actor }}
+      #    password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build image
+        #run: docker build . --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/squaddev:${{ env.tag }} .
+
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Push image
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
+
+          docker tag squaddev $IMAGE_ID:${{ env.tag }}
+          docker push $IMAGE_ID:${{ env.tag }}
+
+  prod:
+    name: PROD
+    needs: build-image
+    runs-on: ubuntu-latest
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_PROD }}
+        username: ${{ secrets.USERNAME_PROD }}
+        password: ${{ secrets.PASSWORD_PROD }}
+        port: ${{ secrets.PORT_PROD }}
+        script: |
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
+
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+          docker pull $IMAGE_ID:${{ env.tag }}
+          docker run -p 3000:80 -it $IMAGE_ID:${{ env.tag }}
+
+
 
     
