--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
 
       - run: npm install
       - run: npm test
-      - run: npm build
+      - run: npm run build
 
 
       - name: List files
