--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,7 +167,7 @@ jobs:
 
       - name: Build image
         #run: docker build . --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
-        run: docker build -t ghcr.io/${{ github.repository_owner }}/squaddev:${{ env.tag }} .
+        run: docker build -t ghcr.io/${{ github.repository }}/squaddev:${{ env.tag }} .
 
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
