--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -162,19 +162,36 @@ jobs:
       #    username: ${{ github.actor }}
       #    password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Log in to registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      
+      
+      #
+      #- name: Log in to registry
+      #  run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+#
+      #- name: Build image
+      #  run: docker build -t ghcr.io/${{ github.repository }}/squaddev:${{ env.tag }} .
+      #  #run: docker build -t jetenow/squaddev:${{ env.tag }} .
+#
+      #- name: Push image
+      #  run: |
+      #    IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
+#
+      #    docker tag squaddev $IMAGE_ID:${{ env.tag }}
+      #    docker push $IMAGE_ID:${{ env.tag }}
 
-      - name: Build image
-        run: docker build -t ghcr.io/${{ github.repository }}/squaddev:${{ env.tag }} .
-        #run: docker build -t jetenow/squaddev:${{ env.tag }} .
 
-      - name: Push image
-        run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/squaddev
-
-          docker tag squaddev $IMAGE_ID:${{ env.tag }}
-          docker push $IMAGE_ID:${{ env.tag }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: jetenow/squaddev:${{ env.tag }}
 
   prod:
     name: PROD
