--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,7 +135,7 @@ jobs:
 
   build-image:
     name: Build docker image
-    needs: [version, checkout]
+    needs: [version, build]
     runs-on: ubuntu-latest
     steps:
 
