--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,6 +135,7 @@ jobs:
 
   build-image:
     name: Build docker image
+    if: ${{ always() }}
     needs: [version, build]
     runs-on: ubuntu-latest
     steps:
