--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,12 @@ jobs:
         with:
           node-version: '14'
 
-      - run: npm install
-      - run: npm test
-      #- run: npm run build
+      - run: |
+           install
+      - run: |
+           test
+      #- run: |
+           run build
 
 
       - name: List files
@@ -145,7 +148,9 @@ jobs:
           name: sources
           path: ./
 
-      - run: npm run build
+      - run: |
+          npm install
+          npm run build
       
       - name: List files
         run: ls -lah
